# face_id-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
assets/: reference_analysis.json
assets/models/: 1g.onnx
assets/reference_output/: test_data.json
benches/: face_detection.rs  face_id.rs
examples/: align_faces.rs  analyze_face.rs  analyze_faces.rs  basic_use.rs  clustering.rs  crop_faces.rs  detect_faces.rs  draw_face_boxes.rs  draw_faces.rs  embed_faces.rs  from_hf.rs  generate_reference_json.rs  produce_test_json.rs  run_gender_age.rs
src/: analyzer.rs  detector.rs  embedder.rs  error.rs  face_align.rs  gender_age.rs  helpers.rs  lib.rs  main.rs  model_manager.rs  recognizer.rs
tests/: integration_test.rs
